# logging

./: CMakeLists.txt  README.md  loggingConfig.cmake.in
cmake/: loggingConfig.cmake.in
docs/: Home.md  README.md  ers-conventions.md  v1.0.0-User-documentation.md  v1.0.0-documentation.md  v1.0.0-pre-release-documentation.md
include/: CPPLINT.cfg
include/logging/: Logger.hpp  Logging.hpp  logging.hpp  tmp.hpp
include/logging/detail/: Logger.hxx
include/logging/internal/: macro.hpp
pybindsrc/: logging_wrapper.cpp
python/logging/: __init__.py
test/: basic_functionality_example.cxx  debug_speed.cxx  performance.cxx  six_streams.cxx
test/apps/: basic_functionality_example.cxx  debug_speed.cxx  exception_example.cxx  log_progress_update.cxx  multithreaded_warning_log.cxx  performance.cxx  six_streams.cxx
